# unsafe-h3lib

./: Cargo.toml  README.md  generated_from.txt  lib.rs
src/apps/: Cargo.toml
src/apps/applib/: Cargo.toml
src/apps/applib/lib/: Cargo.toml  args.rs  kml.rs  lib.rs  test.rs  utility.rs
src/apps/benchmarks/: Cargo.toml  benchmarkCellsToLinkedMultiPolygon.rs  benchmarkDirectedEdge.rs  benchmarkGridDiskCells.rs  benchmarkGridPathCells.rs  benchmarkH3Api.rs  benchmarkIsValidCell.rs  benchmarkPolygon.rs  benchmarkPolygonToCells.rs  benchmarkVertex.rs  lib.rs
src/apps/filters/: Cargo.toml  cellToBoundary.rs  cellToLatLng.rs  cellToLocalIj.rs  gridDisk.rs  gridDiskUnsafe.rs  h3.rs  h3ToComponents.rs  latLngToCell.rs  lib.rs  localIjToCell.rs
src/apps/fuzzers/: Cargo.toml  fuzzerCellArea.rs  fuzzerCellProperties.rs  fuzzerCellToLatLng.rs  fuzzerCellsToLinkedMultiPolygon.rs  fuzzerCompact.rs  fuzzerDirectedEdge.rs  fuzzerDistances.rs  fuzzerEdgeLength.rs  fuzzerGridDisk.rs  fuzzerHierarchy.rs  fuzzerIndexIO.rs  fuzzerInternalAlgos.rs  fuzzerLatLngToCell.rs  fuzzerLocalIj.rs  fuzzerPolygonToCells.rs  fuzzerPolygonToCellsNoHoles.rs  fuzzerResolutions.rs  fuzzerVertexes.rs  lib.rs
src/apps/miscapps/: Cargo.toml  cellToBoundaryHier.rs  cellToLatLngHier.rs  generateBaseCellNeighbors.rs  generateFaceCenterPoint.rs  generatePentagonDirectionFaces.rs  h3ToHier.rs  lib.rs
src/apps/testapps/: Cargo.toml  lib.rs  mkRandGeo.rs  mkRandGeoBoundary.rs  testBBox.rs  testBaseCells.rs  testCellToBoundary.rs  testCellToBoundaryEdgeCases.rs  testCellToCenterChild.rs  testCellToChildren.rs  testCellToChildrenSize.rs  testCellToLatLng.rs  testCellToLocalIj.rs  testCellToLocalIjExhaustive.rs  testCellToParent.rs  testCellsToLinkedMultiPolygon.rs  testCompactCells.rs  testCoordIj.rs  testCoordIjk.rs  testDirectedEdge.rs  testDirectedEdgeExhaustive.rs  testGetIcosahedronFaces.rs  testGridDisk.rs  testGridDisksUnsafe.rs  testGridDistance.rs  testGridDistanceExhaustive.rs  testGridPathCells.rs  testGridPathCellsExhaustive.rs  testGridRingUnsafe.rs  testH3Api.rs  testH3CellArea.rs  testH3CellAreaExhaustive.rs  testH3Index.rs  testH3Iterators.rs  testH3Memory.rs  testH3NeighborRotations.rs  testH3SetToVertexGraph.rs  testLatLng.rs  testLatLngToCell.rs  testLinkedGeo.rs  (+9 more)
src/h3lib/: Cargo.toml
src/h3lib/lib/: algos.rs  baseCells.rs  bbox.rs  coordijk.rs  directedEdge.rs  faceijk.rs  h3Index.rs  iterators.rs  latLng.rs  lib.rs  linkedGeo.rs  localij.rs  mathExtensions.rs  polygon.rs  vec2d.rs  vec3d.rs  vertex.rs  vertexGraph.rs
