[package]
name = "unsafe-h3lib-fuzzers"
authors = ["Christian Legnitto <christian@legnitto.com>", "C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "unsafe_h3lib_fuzzers"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
unsafe-h3lib = { version = "*", path = "../../h3lib" }
unsafe-h3lib-applib = { version = "*", path = "../applib" }
unsafe-h3lib-testapps = { version = "*", path = "../testapps" }
num-traits = "0.2"
libc = "0.2"

[[bin]]
name = "fuzzerCellArea"
path = "fuzzerCellArea.rs"

[[bin]]
name = "fuzzerCellProperties"
path = "fuzzerCellProperties.rs"

[[bin]]
name = "fuzzerCellToLatLng"
path = "fuzzerCellToLatLng.rs"

[[bin]]
name = "fuzzerCellsToLinkedMultiPolygon"
path = "fuzzerCellsToLinkedMultiPolygon.rs"

[[bin]]
name = "fuzzerCompact"
path = "fuzzerCompact.rs"

[[bin]]
name = "fuzzerDirectedEdge"
path = "fuzzerDirectedEdge.rs"

[[bin]]
name = "fuzzerDistances"
path = "fuzzerDistances.rs"

[[bin]]
name = "fuzzerEdgeLength"
path = "fuzzerEdgeLength.rs"

[[bin]]
name = "fuzzerGridDisk"
path = "fuzzerGridDisk.rs"

[[bin]]
name = "fuzzerHierarchy"
path = "fuzzerHierarchy.rs"

[[bin]]
name = "fuzzerIndexIO"
path = "fuzzerIndexIO.rs"

[[bin]]
name = "fuzzerInternalAlgos"
path = "fuzzerInternalAlgos.rs"

[[bin]]
name = "fuzzerLatLngToCell"
path = "fuzzerLatLngToCell.rs"

[[bin]]
name = "fuzzerLocalIj"
path = "fuzzerLocalIj.rs"

[[bin]]
name = "fuzzerPolygonToCells"
path = "fuzzerPolygonToCells.rs"

[[bin]]
name = "fuzzerPolygonToCellsNoHoles"
path = "fuzzerPolygonToCellsNoHoles.rs"

[[bin]]
name = "fuzzerResolutions"
path = "fuzzerResolutions.rs"

[[bin]]
name = "fuzzerVertexes"
path = "fuzzerVertexes.rs"
