[package]
name = "unsafe-h3lib-applib"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "unsafe_h3lib_applib"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
unsafe-h3lib = { version = "*", path = "../../../h3lib" }
num-traits = "0.2"
libc = "0.2"